--- a/index.html
+++ b/index.html
@@ -132,28 +132,28 @@
   </div>
 
   <!-- Display Control Window -->
-  <div style="position: absolute; left: 280px; top: 8px; display: none" id="vue_anim_control">
-    <div style="display: inline-block; height: 48px; padding-top: 12px; color: #222222">アニメーション</div>
+  <div class="anim_panel" style="display: none" id="vue_anim_control">
+    <div style="display: inline-block; height: 48px; padding-top: 12px">アニメーション</div>
     <button class="floating_button" v-if="showPlayButton" @click="clickPlayButton">
-      <img src="ui_asset/play_circle_outline-24px.svg"/>
+      <img src="ui_asset/play_circle_white_24dp.svg"/>
     </button>
     <button class="floating_button" v-if="showPauseButton" @click="clickPauseButton">
-      <img src="ui_asset/pause_circle_outline-24px.svg"/>
+      <img src="ui_asset/pause_circle_white_24dp.svg"/>
     </button>
 
-    <div style="display: inline-block; height: 48px; padding-top: 12px; padding-left:24px; color: #222222">ワイヤーフレーム表示</div>
+    <div style="display: inline-block; height: 48px; padding-top: 12px; padding-left:24px">ワイヤーフレーム表示</div>
     <button class="floating_button" v-if="!wireframeEnabled" @click="clickEnableWireframe">
-      <img src="ui_asset/check_box_outline_blank-24px.svg"/>
+      <img src="ui_asset/check_box_outline_blank_white_24dp.svg"/>
     </button>
     <button class="floating_button" v-if="wireframeEnabled" @click="clickDisableWireframe">
-      <img src="ui_asset/check_box-24px.svg"/>
+      <img src="ui_asset/check_box_white_24dp.svg"/>
     </button>
 
-    <div style="display: inline-block; height: 48px; padding-top: 12px; padding-left:24px; color: #222222">環境</div>
-    <button class="floating_button" style="width: initial; color: black" @click="clickSetEnv('dark')">
+    <div style="display: inline-block; height: 48px; padding-top: 12px; padding-left:24px">環境</div>
+    <button class="floating_button" style="width: initial" @click="clickSetEnv('dark')">
       暗闇
     </button>
-    <button class="floating_button" style="width: initial; color: black" @click="clickSetEnv('neutral')">
+    <button class="floating_button" style="width: initial" @click="clickSetEnv('neutral')">
       ニュートラル
     </button>
     
